[gd_scene load_steps=11 format=2]

[ext_resource path="res://Road.gd" type="Script" id=1]
[ext_resource path="res://road.png" type="Texture" id=2]
[ext_resource path="res://pedestrian_crosswalk.png" type="Texture" id=3]
[ext_resource path="res://grass.png" type="Texture" id=4]
[ext_resource path="res://flower_3.png" type="Texture" id=5]
[ext_resource path="res://flower_2.png" type="Texture" id=6]
[ext_resource path="res://flower_0.png" type="Texture" id=7]
[ext_resource path="res://flower_1.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 254.25, 11 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 248.5, 12.5 )

[node name="Road" type="Node2D"]
script = ExtResource( 1 )

[node name="CarSpawnerRight" type="Node2D" parent="."]
position = Vector2( 480, 72 )
scale = Vector2( 1.13778, 1 )

[node name="CarSpawnerLeft" type="Node2D" parent="."]
position = Vector2( 0, 82 )
scale = Vector2( 1.06667, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 244, 80 )
scale = Vector2( 1.06667, 1 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]
position = Vector2( -228.749, -80 )
scale = Vector2( 0.937497, 1 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D"]
position = Vector2( 241.75, 79 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 241, 12 )
shape = SubResource( 1 )

[node name="PedestrianCrosswalk" type="Sprite" parent="."]
position = Vector2( 79.161, 80 )
texture = ExtResource( 3 )

[node name="PedestrianCrosswalk2" type="Sprite" parent="."]
position = Vector2( 395, 80 )
texture = ExtResource( 3 )

[node name="grass" type="Sprite" parent="."]
position = Vector2( 239, 55 )
scale = Vector2( 1.01563, 0.56 )
z_index = -2
texture = ExtResource( 4 )

[node name="Flower0" type="Sprite" parent="."]
position = Vector2( 7, 49 )
z_index = 1
texture = ExtResource( 7 )

[node name="Flower1" type="Sprite" parent="."]
position = Vector2( 20, 60 )
z_index = 1
texture = ExtResource( 8 )

[node name="Flower2" type="Sprite" parent="."]
position = Vector2( 41, 49 )
z_index = 1
texture = ExtResource( 6 )

[node name="Flower3" type="Sprite" parent="."]
position = Vector2( 63, 62 )
z_index = 1
texture = ExtResource( 8 )

[node name="Flower4" type="Sprite" parent="."]
position = Vector2( 77, 46 )
z_index = 1
texture = ExtResource( 5 )

[node name="Flower5" type="Sprite" parent="."]
position = Vector2( 83, 51 )
z_index = 1
texture = ExtResource( 8 )

[node name="Flower6" type="Sprite" parent="."]
position = Vector2( 138, 50 )
z_index = 1
texture = ExtResource( 6 )

[node name="Flower7" type="Sprite" parent="."]
position = Vector2( 233, 55 )
z_index = 1
texture = ExtResource( 8 )

[node name="Flower8" type="Sprite" parent="."]
position = Vector2( 164, 50 )
z_index = 1
texture = ExtResource( 6 )

[node name="Flower9" type="Sprite" parent="."]
position = Vector2( 189, 61 )
z_index = 1
texture = ExtResource( 8 )

[node name="Flower10" type="Sprite" parent="."]
position = Vector2( 109, 64 )
z_index = 1
texture = ExtResource( 7 )

[node name="Flower11" type="Sprite" parent="."]
position = Vector2( 450, 50 )
z_index = 1
texture = ExtResource( 7 )

[node name="Flower12" type="Sprite" parent="."]
position = Vector2( 391, 59 )
z_index = 1
texture = ExtResource( 8 )

[node name="Flower13" type="Sprite" parent="."]
position = Vector2( 431, 58 )
z_index = 1
texture = ExtResource( 5 )

[node name="Flower14" type="Sprite" parent="."]
position = Vector2( 409, 47 )
z_index = 1
texture = ExtResource( 6 )

[node name="Flower15" type="Sprite" parent="."]
position = Vector2( 316, 50 )
z_index = 1
texture = ExtResource( 7 )

[node name="Flower16" type="Sprite" parent="."]
position = Vector2( 350, 60 )
z_index = 1
texture = ExtResource( 8 )

[node name="Flower17" type="Sprite" parent="."]
position = Vector2( 270, 54 )
z_index = 1
texture = ExtResource( 6 )

[node name="Flower18" type="Sprite" parent="."]
position = Vector2( 252, 58 )
z_index = 1
texture = ExtResource( 5 )

[node name="Flower19" type="Sprite" parent="."]
position = Vector2( 289, 58 )
z_index = 1
texture = ExtResource( 7 )

[node name="Flower20" type="Sprite" parent="."]
position = Vector2( 208, 48 )
z_index = 1
texture = ExtResource( 8 )

[node name="Flower21" type="Sprite" parent="."]
position = Vector2( 284, 42 )
z_index = 1
texture = ExtResource( 7 )

[node name="Flower22" type="Sprite" parent="."]
position = Vector2( 330, 58 )
z_index = 1
texture = ExtResource( 6 )

[node name="Flower24" type="Sprite" parent="."]
position = Vector2( 371, 42 )
z_index = 1
texture = ExtResource( 6 )

[node name="Flower23" type="Sprite" parent="."]
position = Vector2( 412, 61 )
z_index = 1
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 6.0
margin_top = 73.0
margin_right = 46.0
margin_bottom = 87.0
text = "test"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
